--- a/src/lite-yt-embed.css
+++ b/src/lite-yt-embed.css
@@ -1,3 +1,4 @@
+/* Critical CSS Start - https://web.dev/extract-critical-css/ */
 lite-youtube {
     background-color: #000;
     position: relative;
@@ -6,13 +7,24 @@ lite-youtube {
     background-position: center center;
     background-size: cover;
     cursor: pointer;
-    max-width: 720px;
 }
+
+/* responsive iframe with a 16:9 aspect ratio
+    thanks https://css-tricks.com/responsive-iframes/
+*/
+lite-youtube::after {
+    content: "";
+    display: block;
+    padding-bottom: calc(100% / (16 / 9));
+}
+/* Critical CSS End */
+
 
 /* gradient */
 lite-youtube::before {
     content: '';
     display: block;
+    box-sizing: unset;
     position: absolute;
     top: 0;
     background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAADGCAYAAAAT+OqFAAAAdklEQVQoz42QQQ7AIAgEF/T/D+kbq/RWAlnQyyazA4aoAB4FsBSA/bFjuF1EOL7VbrIrBuusmrt4ZZORfb6ehbWdnRHEIiITaEUKa5EJqUakRSaEYBJSCY2dEstQY7AuxahwXFrvZmWl2rh4JZ07z9dLtesfNj5q0FU3A5ObbwAAAABJRU5ErkJggg==);
@@ -24,14 +36,6 @@ lite-youtube::before {
     transition: all 0.2s cubic-bezier(0, 0, 0.2, 1);
 }
 
-/* responsive iframe with a 16:9 aspect ratio
-    thanks https://css-tricks.com/responsive-iframes/
-*/
-lite-youtube::after {
-    content: "";
-    display: block;
-    padding-bottom: calc(100% / (16 / 9));
-}
 lite-youtube > iframe {
     width: 100%;
     height: 100%;
@@ -82,4 +86,4 @@ lite-youtube.lyt-activated > .lty-playbtn {
     position: absolute;
     white-space: nowrap;
     width: 1px;
-  }
+}
